--- a/public/styles/flexbox.css
+++ b/public/styles/flexbox.css
@@ -1,7 +1,9 @@
 .flexbox-heading {
+    min-height: 60px; 
     display: flex;
+    justify-content: center;
     margin-bottom: 20px;
-    justify-content: space-evenly;
+    align-items: center;
     text-align: center;
     color: red;
 }
@@ -20,6 +22,7 @@
 .third-section {
     max-width: 300px;
     flex: 1;
+    margin: 0 auto;;
 }
 .flexbox-footer {
     display: flex;
